# tensorflowmobile

./: README.md
Linux/: CMakeLists.txt
Linux/src/: CCDemo.cc  CCDemo.h  main.cc
MobileDemo/app/: build.gradle
MobileDemo/app/src/androidTest/java/win/i029/ll/mobiledemo/: ExampleInstrumentedTest.java
MobileDemo/app/src/main/: AndroidManifest.xml
MobileDemo/app/src/main/assets/: mobile-model.pb
MobileDemo/app/src/main/java/win/i029/ll/mobiledemo/: MainActivity.java  MobileDemo.java
MobileDemo/app/src/main/res/layout/: activity_main.xml
MobileDemo/app/src/test/java/win/i029/ll/mobiledemo/: ExampleUnitTest.java
MobileDemo/gradle/wrapper/: gradle-wrapper.properties
MobileDemo/python/: mobile_android.py
TFLiteDemo/app/: build.gradle
TFLiteDemo/app/src/androidTest/java/win/i029/ll/tflitedemo/: ExampleInstrumentedTest.java
TFLiteDemo/app/src/main/: AndroidManifest.xml
TFLiteDemo/app/src/main/java/win/i029/ll/tflitedemo/: LiteDemo.java  MainActivity.java
TFLiteDemo/app/src/main/res/layout/: activity_main.xml
TFLiteDemo/app/src/main/res/values/: strings.xml
TFLiteDemo/app/src/test/java/win/i029/ll/tflitedemo/: ExampleUnitTest.java
TFLiteDemo/gradle/wrapper/: gradle-wrapper.properties
TFLiteDemo/python/: lite_android.py
TFLiteDemo/python/model/: lite-model.tflite
